<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logotipo" />


        <EditText
            android:id="@+id/et_codigo"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Código"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/boton_azul"
            android:text="Iniciar sesión"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/boton_gris"
            android:text="Regístrate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
</LinearLayout>
