...
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/logotipo" />

        <TextView
            android:id="@+id/header_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="Perfil"
            android:textAlignment="gravity"
            android:textSize="25dp" />

    </LinearLayout>

    <View
...
